Fixes toolbar and sidebar on smaller screens

--- a/ebegu-web/src/gesuch/component/gesuchToolbar/gesuchToolbar.less
+++ b/ebegu-web/src/gesuch/component/gesuchToolbar/gesuchToolbar.less
@@ -181,6 +181,7 @@
         padding-right: 0;
         button {
             .bold();
+            display: block;
             height: @navbar-height;
             min-width: 17.5rem;
             width: auto;
