--- a/ebegu-web/src/style/organisms/sidenav.less
+++ b/ebegu-web/src/style/organisms/sidenav.less
@@ -38,6 +38,7 @@
             height: @sidebar-height;
             text-align: left;
             padding: 0;
+            display: block;
             &:focus, &:active, &:hover {
                 outline: none !important;
                 text-decoration: none !important;
@@ -51,9 +52,11 @@
             margin-left: 2.5rem;
             letter-spacing: 0.1rem;
             line-height: @sidebar-height;
+            height: @sidebar-height;
             font-size: 1.6rem;
             text-align: left;
             color: @contrast-darkest;
+            display: block;
         }
         .fa {
             margin: 0;
